Add AppVersion and Status to GetInstalledPackageSummaries. (#3206)
* Add AppVersion and Status to GetInstalledPackageSummaries.


* Prettier


* Update to use an enum for status Reason.

Also switched from naming the third field `detail` to
user_reason, which indicates a non-programmatic text string
(rather than perhaps structured details).


* Prettier
